contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ header li {
 }
 header a {
   display: block;
-  color: #55cad0;
+  color: #046a6f;
   padding: 10px;
 }
 header a:hover {
@@ -587,7 +587,7 @@ footer {
   border-radius: 4px;
   padding: 5px 10px;
   border: none;
-  color: #55cad0;
+  color: #046a6f;
   font-weight: 700;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: 0.5s ease all;
